--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Upload to S3
-        run: aws s3 cp dist/ s3://${{ secrets.S3_BUCKET }}/ --recursive
+        run: aws s3 cp dist/stradux/ s3://${{ secrets.S3_BUCKET }}/ --recursive
 
       - name: Invalidate CloudFront cache
         run: |
